[package]
name = "octo-payments"
version = "0.1.0"
edition = "2024"
default-run = "octo-payments"

[lib]
path = "src/lib.rs"

[[bin]]
name = "octo-payments"
path = "src/main.rs"

[dependencies]
csv = "1.4"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = { version = "1.41.0", features = ["serde-str"] }
thiserror = "2.0"

[dev-dependencies]
rust_decimal_macros = "1.40"
